Fix issues with spacing

--- a/src/main/webapp/app/lecture/overview/course-lectures/attachment-video-unit/attachment-unit.component.scss
+++ b/src/main/webapp/app/lecture/overview/course-lectures/attachment-video-unit/attachment-unit.component.scss
@@ -1,4 +1,5 @@
-.video-player-container {
+.video-player-container,
+.pdf-viewer-spacing {
     padding-top: 20px;
     padding-bottom: 20px;
 }
